# little-weirdo-esp32

./: .gitignore  Cargo.toml  LICENSE  README.md  diagram.json  espflash.toml  partitions.csv  wokwi.toml
.cargo/: config.toml
src/: main.rs
src/patches/: bass.lwp  ebass.lwp  piano.lwp  raw_square.lwp  supersaw_4_oscillators.lwp
