[package]
name = "little_weirdo_esp32"
version = "0.1.0"
authors = ["Daniël van Gils"]
edition = "2021"
license = ""


[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.23.1", features = ["esp32s3", "octal-psram"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
embedded-hal = { version = "1.0.0" }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0" }
embassy-sync = { version = "0.6.2", features = [] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }

log = { version = "0.4.25" }
esp-alloc = { version = "0.6.0" }
little_weirdo = { version = "0.1.0" }
#little_weirdo = { path = "../little-weirdo" }

static_cell = { version = "2.1.0", features = ["nightly"] }
fugit = "0.3.7"
embassy-futures = "0.1.1"
esp-storage ={ version="0.5.0", features = ["esp32s3", "nor-flash"]}
embedded-storage = { version= "0.3.1", features = []}
esp-partition-table = "0.1.2"
postcard = "1.1.3"


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
