[package]
name = "little_weirdo_esp32"
version = "0.1.0"
authors = ["Daniël van Gils"]
edition = "2021"
license = ""
 
[dependencies]

esp-hal = { version = "=1.0.0-rc.1", features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.1.1", features = ["embassy", "esp-alloc", "esp32s3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.18.0", features = ["panic-handler", "println", "esp32s3"] }
embassy-executor = { version = "0.9.0", features = [] }
embassy-time     = "0.5.0"
embassy-sync = "0.7.2"
esp-alloc        = "0.9.0"
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
embassy-futures = "0.1.2"
esp-storage ={ version="0.6.0", features = ["esp32s3"]}
embedded-storage = { version= "0.3.1", features = []}
esp-partition-table = "0.1.3"
postcard = "1.1.3"

little_weirdo = { version = "0.1.1" }



[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
